macros/tests/trybuild/use.stderr
error: cannot use `serde_args::generate` macro on use declaration
 --> tests/trybuild/use.rs:4:1
  |
4 | use std::vec;
  | ^^^^^^^^^^^^^
