macros/tests/trybuild/use.rs
use serde_args_macros::generate;

#[generate]
use std::vec;

fn main() {}
